assets/chat/css/style.scss
/* ... */
/* Base ChatMessage */
.msg-chat {
    clear: both;
    word-wrap: break-word;
    padding: 3px 12px 3px 7px;
    margin-top: 1px;
    color: $color-chat-text2;
    hr {
        margin: 8px 0;
    }
    .ctrl {
        font-weight: bold;
        margin-left: -7px;
        margin-right: 3px;
        color: $color-label-user;
        text-shadow: 1px 1px 0px black;
    }
    .ctrl-leading {
        font-weight: bold;
        margin-right: 3px;
        color: $color-label-user;
        text-shadow: 1px 1px 0px black;
    }
    .user {
        font-weight: 500;
        cursor: pointer;
    }
    .chat-user {
        cursor: pointer;
        position: relative;
        z-index: 120;
    }
    .chat-user:hover {
        text-decoration: underline;
    }
    .time {
        font-size: $text-size-sm;
        color: $color-chat-time;
        display: none; /* hidden by default */
    }
    .greentext {
        color: $color-green-text;
    }
    .spoiler {
        padding-left: 3px;
        padding-right: 3px;
        border-radius: 3px;
        border-width: 1px;
        border-style: solid;
        border-color: #000000;
        background:  $color-spoiler-hidden;
        color:  transparent;
        transition: all .2s ease-in-out;
        user-select: none;
        cursor: pointer;
        .weather {
            opacity: 0;
        }
        .chat-user {
            pointer-events: none;
        }
        .generify-container {
            .chat-emote {
                transition: all .2s;
                opacity: 0 !important;
                transform: scale(0);
            }
        }

        .externallink,
        .externallink:visited,
        .embed-externallink:after,
        .embed-externallink:hover:after,
        .embed-internallink {
            pointer-events: none;
            color: $color-spoiler-hidden;
        }
        .nsfw-link,
        .nsfl-link,
        .loud-link {
            border-bottom: 0px !important;
        }
        &.visible {
            .weather {
                opacity: inherit;
            }
            user-select: auto;
            background: $color-spoiler-visible;
            color: $color-chat-text2;
            .chat-user {
                pointer-events: auto;
            }
            .generify-container {
                .chat-emote {
                    opacity: inherit !important;
                    transform: scale(1);
                }
            }
            .externallink,
            .embed-internallink {
                pointer-events: auto;
                color: $color-link;
            }
            .externallink:visited {
                color: $color-link-visited;
            }
            .externallink:hover,
            .externallink:focus,
            .embed-internallink:hover,
            .embed-internallink:focus {
                color: $color-link-hover;
            }
            .embed-externallink:after {
                color: $color-chat-disabled;
            }
            .embed-externallink:hover:after {
                color: $color-link-hover;
            }
            .nsfw-link {
                border-bottom: 1px dashed $color-underline-nsfw !important;
            }
            .nsfl-link {
                border-bottom: 1px dashed $color-underline-nsfl !important;
            }
            .loud-link {
                border-bottom: 1px dashed $color-underline-loud !important;
            }
            .weeb-link {
                border-bottom: 1px dashed $color-underline-weeb !important;
            }
        }
    }
    .externallink,
    .embed-internallink,
    .nsfw-link {
        border-style: solid;
        border-color: transparent;
        border-width: 1px 0 1px 0;
    }
    .externallink,
    .embed-internallink {
        color: $color-link;
        position: relative;
        z-index: 120;
    }
    .externallink:visited,
    .embed-internallink:visited {
        color: $color-link-visited;
    }
    .externallink:hover,
    .externallink:focus,
    .embed-internallink:hover,
    .embed-internallink:focus {
        color: $color-link-hover;
    }
    .nsfw-link {
        border-bottom: 1px dashed $color-underline-nsfw !important;;
    }
    .nsfl-link {
        border-bottom: 1px dashed $color-underline-nsfl !important;
    }
    .loud-link {
        border-bottom: 1px dashed $color-underline-loud !important;
    }
    .weeb-link {
        border-bottom: 1px dashed $color-underline-weeb !important;
    }
    .embed-externallink {
        text-decoration: none;
        border-bottom: none;

        &:after {
            color: $color-chat-disabled;
            content: "\f08e"; // External-link font-awesome
            font: normal normal normal 19px FontAwesome;
            margin: 0 4px;
            vertical-align: middle;
        }

        &:hover:after {
            color: $color-link-hover;
        }
    }
    &.msg-continue {
        margin-top: 1px;
        margin-bottom: 3px;
        padding-top: 0;

        &.msg-me {
            padding-top: 2px;
            margin-top: 3px;
        }

        .msg-highlight + &,
        .msg-tagged + &.msg-tagged {
            margin-top: -4px;
            padding-top: 1px;
            border-top: none;

            &.msg-me {
                padding-top: 4px;
            }
        }
    }
    .features {
        vertical-align: top;
        height: 16px;
        .flair {
            display: inline-block;
            margin: 0;
            opacity: 1;
            vertical-align: sub;
        }
    }
}
.msg-chat:first-child {
    margin-top: 0.5em;
}
.msg-chat:last-child {
    margin-bottom: 0.5em;
}

/* disable animations for emotes that have likely scrolled off-screen to save CPU-time. */
.msg-chat:nth-last-child(n+50) {
    /* container is added to all emotes */
    .generify-container {
        .chat-emote {
            animation: none;
        }
    }
}
/* ... */

